fixed input textbox overflowing

--- a/src/Components/FontConverter/FontConverter.css
+++ b/src/Components/FontConverter/FontConverter.css
@@ -34,6 +34,7 @@ textarea {
     border: none;
     resize: none;
     background-color: transparent;
+    width: 100%;
 }
 
 .paper_input::-webkit-scrollbar {
